--- a/bin/install
+++ b/bin/install
@@ -57,23 +57,24 @@ my_mktemp () {
 }
 
 install_helm () {
-    local install_type=$1
-    local version=$2
-    local install_path=$3
-    local platform=$(get_platform)
-    local arch=$(get_arch)
-    local tempdir=$(my_mktemp $platform)
-		local download_url=$(get_download_url $version $platform)
-		
-		local bin_install_path="$install_path/bin"
-		local bin_path="$bin_install_path/skaffold"
+	local install_type=$1
+	local version=$2
+	local install_path=$3
+	local platform=$(get_platform)
+	local arch=$(get_arch)
+	local tempdir=$(my_mktemp $platform)
+	local download_url=$(get_download_url $version $platform)
+	
+	local bin_install_path="$install_path/bin"
+	local bin_path="$bin_install_path/skaffold"
 
-		mkdir -p $bin_install_path
-    curl -sSL $download_url -o "${tempdir}/archive.tar.gz"
-    tar -C "$tempdir" -xzf "${tempdir}/archive.tar.gz"
-		mv "${tempdir}/${platform}-amd64/helm" $
-    rm -rf $tempdir $bin_install_path
-		ls $bin_install_path
+	mkdir -p $bin_install_path
+	curl -sSL $download_url -o "$tempdir/archive.tar.gz"
+	tar -C "$tempdir" -xzf "$tempdir/archive.tar.gz"
+	ls "$tempdir/${platform}-amd64"
+	ls "$tempdir/${platform}-amd64/helm"
+	mv "$tempdir/${platform}-amd64/helm" "$bin_install_path"
+	rm -rf $tempdir 
 }
 
 install_helm $ASDF_INSTALL_TYPE $ASDF_INSTALL_VERSION $ASDF_INSTALL_PATH
